--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,94 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fondo"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
+    <Button
+        android:id="@+id/botonStart"
+        style="@style/Widget.MaterialComponents.Button.Icon"
+        android:layout_width="171dp"
+        android:layout_height="58dp"
+        android:backgroundTint="#FBC02D"
+        android:text="@string/boton_start"
+        app:icon="@drawable/simonicon"
+        app:iconGravity="start"
+        app:iconSize="30dp"
+        app:iconTint="#354924"
+        app:iconTintMode="add"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.959" />
+
+    <TextView
+        android:id="@+id/textViewRonda"
+        style="@style/Widget.AppCompat.TextView"
+        android:layout_width="138dp"
+        android:layout_height="68dp"
+        android:fontFamily="casual"
+        android:text="@string/texto_ronda"
+        android:textColor="#FFFFFD"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.972"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.024" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/botonVerde"
+        android:layout_width="181dp"
+        android:layout_height="175dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="132dp"
+        android:background="@drawable/boton_verde"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/botonAmarillo"
+        android:layout_width="181dp"
+        android:layout_height="175dp"
+        android:layout_marginStart="12dp"
+        android:background="@drawable/boton_amarillo"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/botonVerde"
+        app:layout_constraintStart_toEndOf="@+id/botonVerde"
+        app:layout_constraintTop_toTopOf="@+id/botonVerde"
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/botonRojo"
+        android:layout_width="181dp"
+        android:layout_height="175dp"
+        android:layout_marginBottom="12dp"
+        android:background="@drawable/boton_rojo"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/botonVerde"
+        app:layout_constraintEnd_toEndOf="@+id/botonVerde"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/botonVerde"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/botonAzul"
+        android:layout_width="181dp"
+        android:layout_height="175dp"
+        android:layout_marginStart="12dp"
+        android:background="@drawable/boton_azul"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/botonRojo"
+        app:layout_constraintStart_toEndOf="@+id/botonRojo"
+        app:layout_constraintTop_toTopOf="@+id/botonRojo"
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="SpeakableTextPresentCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
