--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -94,4 +94,18 @@
         app:layout_constraintVertical_bias="1.0"
         tools:ignore="SpeakableTextPresentCheck" />
 
+    <ImageView
+        android:id="@+id/gameOverView"
+        android:layout_width="392dp"
+        android:layout_height="276dp"
+        android:contentDescription="@string/game_over"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/botonStart"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.473"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.521"
+        app:srcCompat="@drawable/game_over" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
