--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -108,4 +108,20 @@
         app:layout_constraintVertical_bias="0.521"
         app:srcCompat="@drawable/game_over" />
 
+    <TextView
+        android:id="@+id/testoAnim"
+        android:layout_width="395dp"
+        android:layout_height="255dp"
+        android:fontFamily="casual"
+        android:text="@string/text_anim"
+        android:textColor="@color/white"
+        android:textSize="26sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/botonStart"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
